# DowJonesTechAssignment

./: .gitignore  README.md  main.py  pyproject.toml
nbs/: dev.ipynb  main.ipynb
