[project]
name = "dowjonestechassignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
